--- a/workshops/index.html
+++ b/workshops/index.html
@@ -221,15 +221,164 @@
 	for any further information contact <a href="mailto:martina.mestr@gmail.com">martina.mestr@gmail.com</a></p>
       </div>
 
-      <a href="#rosendale2015" class="animated_popup"><h1>Rosendale New York-Lifebridge Foundation</h1></a>
+      <a href="#rosendale2015" class="animated_popup"><h1>Rosendale, New York</h1></a>
       <h2>November 6th - November 9th 2015</h2>
 
       <div id="rosendale2015" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>Rosendale New York-Lifebridge Foundation</h3>
+        <h3>Rosendale, New York</h3>
 
-        <p>November 6th 2015 - November 9th 2015</p>
+	<h1 lang="en-US" class="western"><font face="Calisto MT"><font size="4" style="font-size: 16pt">4-Day
+	Camp Intensive in New York’s Hudson Valley</font></font></h1>
+	<h1 lang="en-US" class="western"><font face="Calisto MT"><font size="4" style="font-size: 16pt">November 6-9, 2015</font></font></h1>
+	<p lang="en-US" class="western" align="center" style="font-style: normal; font-weight: normal">
+	<br>
+	</p>
+	<p lang="en-US" class="western" align="center" style="font-style: normal; font-weight: normal">
+	<font face="Times"><font size="3" style="font-size: 12pt"><font face="Calisto MT"><font size="4" style="font-size: 16pt">with
+	4</font></font><sup><font face="Calisto MT"><font size="4" style="font-size: 16pt">th</font></font></sup><font face="Calisto MT"><font size="4"        style="font-size: 16pt">
+	Generation Master Alex Dong</font></font></font></font></p>
 
-        <p>Come practice with forms weapons and Push Hands with other enthusiasts and possibly catch a glimpse of the foliage.</p>
+
+	<p lang="en-US" class="western" align="center" style="font-style: normal; font-weight: normal">
+	<font face="Times"><font size="3" style="font-size: 12pt"><font face="Calisto MT"><font size="4" style="font-size: 14pt">Lifebridge
+	Sanctuary, Rosendale New York</font></font></font></font></p>
+	<p lang="en-US" class="western" align="center" style="font-style: normal; font-weight: normal">
+	<font face="Calisto MT"><font size="4" style="font-size: 14pt">(about
+	75 miles north of New York City)</font></font></p>
+	<p lang="en-US" class="western" align="center" style="font-weight: normal">
+	<font face="Calisto MT"><font size="5" style="font-size: 18pt"><i>Students
+       must know the whole Slow Set to attend the whole camp or the weekend.</i></font></font></p>
+
+       <p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+       <font face="Times"><font size="3" style="font-size: 12pt"><font face="Calisto MT"><font size="4" style="font-size: 14pt"><u><b>Cost
+       for the 4 day camp, $620, includes:</b></u></font></font></font></font></p>
+       </span>3 nights lodging, semi-private rooms w/ shared bath</b></font></font>
+       </p>
+       <p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+        <font face="Times"><font size="3" style="font-size: 12pt"><font face="Calisto MT"><font size="4" style="font-size: 14pt"></font></font><font face="Calisto MT"><font size="4" style="font-size: 14pt"><i>Bed
+	linens provided but bring your own towel</i></font></font></font></font></p>
+	<p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+	<font face="Times"><font size="3" style="font-size: 12pt"><font face="Calisto MT"><font size="4" style="font-size: 14pt"><b>9
+	classes:	Friday 3:00 pm &amp; 7:00 pm</b></font></font></font></font></p>
+	<p lang="en-US" style="margin-left: 1.27cm; text-indent: 1.27cm; font-style: normal; page-break-after: avoid">
+	<font face="Calisto MT"><font size="4" style="font-size: 14pt">Saturday
+	– Sunday 10:00 am, 3:00 pm &amp; 7:00 pm</font></font></p>
+	<p lang="en-US" class="western" style="margin-left: 1.27cm; text-indent: 1.27cm; font-style: normal">
+	<font face="Calisto MT"><font size="4" style="font-size: 14pt"><b>Monday
+	10:00 am</b></font></font></p>
+	<p lang="en-US" class="western" style="font-style: normal"><font face="Calisto MT"><font size="4" style="font-size: 14pt"><b>8
+	Meals: Friday dinner – Monday breakfast </b></font></font>
+	</p>
+	<p lang="en-US" class="western" style="font-style: normal"><br>
+	</p>
+	<p lang="en-US" class="western" style="font-weight: normal"><font face="Calisto MT"><font size="4" style="font-size: 16pt"><i>Classes
+	will include a mixture of forms and push hands</i></font></font></p>
+	<p lang="en-US" class="western" style="font-style: normal"><br>
+	</p>
+
+	<p lang="en-US" class="western" align="center" style="font-style: normal; font-weight: normal">
+	<font face="Times"><font size="3" style="font-size: 12pt"><font face="Calisto MT"><font size="4" style="font-size: 16pt"><i><b>Register
+	by Oct. 1 </b></i></font></font></font></font>
+	</p>
+	<p lang="en-US" class="western" align="center" style="font-style: normal; font-weight: normal">
+	<font face="Times"><font size="3" style="font-size: 12pt"><font face="Calisto MT"><font size="4" style="font-size: 16pt"><i><b>to
+	guarantee a space </b></i></font></font></font></font>
+	</p>
+	<p lang="en-US" class="western" align="center"><br>
+	</p>
+	<p lang="en-US" class="western" align="center" style="font-style: normal; font-weight: normal">
+	<font face="Times"><font size="3" style="font-size: 12pt"><font face="Calisto MT"><font size="4" style="font-size: 16pt"><i><b>After
+	Oct. 1, add 10%          </b></i></font></font></font></font>
+	</p>
+	<p lang="en-US" class="western" align="center"><br>
+	</p>
+	<p lang="en-US" class="western" align="center" style="font-style: normal; font-weight: normal">
+	<font face="Times"><font size="3" style="font-size: 12pt"><font face="Calisto MT"><font size="4" style="font-size: 16pt"><i><b>10-20%
+	charge for cancellations</b></i></font></font></font></font></p>
+	<p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+	<br>
+	</p>
+	</span>Weekend Option, $425, includes</b></u></font></font><font face="Calisto MT"><font size="4"><b>:</b></font></font></font></font>
+	</p>
+	<p lang="en-US" style="font-style: normal; page-break-after: avoid"><font face="Calisto MT"><font size="4" style="font-size: 14pt">2
+	nights lodging, Friday &amp; Saturday</font></font></p>
+	<p lang="en-US" class="western" style="font-style: normal"><font face="Calisto MT"><font size="4" style="font-size: 14pt"><b>6
+	classes: Friday 3pm to Sunday 10am</b></font></font></p>
+	<p lang="en-US" class="western" style="font-style: normal"><font face="Calisto MT"><font size="4" style="font-size: 14pt"><b>6
+	meals: Friday dinner to Sunday lunch</b></font></font></p>
+	<p lang="en-US" class="western" style="font-weight: normal"><br>
+	</p>
+	<p lang="en-US" class="western" style="font-style: normal"><br>
+	</p>
+	<p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+	<font face="Times"><font size="3" style="font-size: 12pt"><font face="Calisto MT"><font size="4" style="font-size: 14pt"><u><b>Beginners
+	Option: Saturday 10am and 3pm classes</b></u></font></font><font face="Calisto MT"><font size="4" style="font-size: 14pt"><b>:</b></font></font></font></font></p>
+	<p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+	<font face="Times"><font size="3" style="font-size: 12pt"><font face="Calisto MT"><font size="4" style="font-size: 14pt"><b>$65
+	one class plus lunch</b></font></font></font></font></p>
+	<p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+	<font face="Times"><font size="3" style="font-size: 12pt"><font face="Calisto MT"><font size="4" style="font-size: 14pt"><b>$100
+	both classes plus lunch</b></font></font></font></font></p>
+	<p lang="en-US" class="western" style="font-weight: normal"><br>
+	</p>
+	<p lang="en-US" class="western" align="center" style="font-style: normal; font-weight: normal">
+	<br>
+	</p>
+	<h2 lang="en-US" class="western" align="center">Send payment to
+	Martha Cheo, 115 Springtown Rd., New Paltz, NY 12561</h2>
+	<h2 lang="en-US" class="western" align="center">845-256-9316,
+	mcheo@hvc.rr.com (checks payable to Martha Cheo)</h2>
+	
+	<p lang="en-US" class="western" align="center"><font face="Calisto MT"><font size="3" style="font-size: 12pt"><i><u><b>Please
+	register me for Alex Dong’s Hudson Valley Intensive, November 6-9,
+	2015</b></u></i></font></font></p>
+	<p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+	<br>
+	</p>
+	<p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+	<font face="Calisto MT"><font size="4" style="font-size: 14pt">Name________________________________________
+	Phone_________________________</font></font></p>
+	<p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+	<br>
+	</p>
+	<p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+	<font face="Times"><font size="3" style="font-size: 12pt"><font face="Calisto MT"><font size="4" style="font-size: 14pt">Address______________________________________</font></font><font face="Calisto MT">	
+	</font><font face="Calisto MT"><font size="4" style="font-size: 14pt">City_________________________
+	 </font></font></font></font>
+	 </p>
+	 <p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+	 <br>
+	 </p>
+	 <p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+	 <font face="Times"><font size="3" style="font-size: 12pt"><font face="Calisto MT"><font size="4" style="font-size: 14pt">State________
+	 Zip__________________</font></font><font face="Calisto MT">
+	 	  </font><font face="Calisto MT"><font size="4" style="font-size: 14pt">Email_____________________________________	</font></font></font></font></p>
+
+
+<p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+<br>
+</p>
+<p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+<font face="Calisto MT"><font size="4" style="font-size: 14pt">Name________________________________________
+Phone_________________________</font></font></p>
+<p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+<br>
+</p>
+<p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+<font face="Times"><font size="3" style="font-size: 12pt"><font face="Calisto MT"><font size="4" style="font-size: 14pt">Address______________________________________</font></font><font face="Calisto MT">	
+</font><font face="Calisto MT"><font size="4" style="font-size: 14pt">City_________________________
+ </font></font></font></font>
+</p>
+<p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+<br>
+</p>
+<p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+<font face="Times"><font size="3" style="font-size: 12pt"><font face="Calisto MT"><font size="4" style="font-size: 14pt">State________
+Zip__________________</font></font><font face="Calisto MT">
+</font><font face="Calisto MT"><font size="4" style="font-size: 14pt">Email_____________________________________	</font></font></font></font></p>
+<p lang="en-US" class="western" style="font-style: normal; font-weight: normal">
+<br>
+</p>
 
         <p>For more information and registration, contact Martha at <a href="mailto:mcheo@hvc.rr.com">mcheo@hvc.rr.com</a> for details.</p>
       </div>
