--- a/workshops/index.html
+++ b/workshops/index.html
@@ -226,48 +226,42 @@
 
       <div id="rosendale2015" style="display:none" class="image-popup" class="book-details-popup">
         
+	<h2>4-Day Camp Intensive in New York’s Hudson Valley</h2>
+	<h2>with 4th Generation Master Alex Dong</h2>
+	<h3>November 6-9, 2015</h3>
 
+	<h3>Lifebridge Sanctuary, Rosendale New York<h3>
+	<h3>(about 75 miles north of New York City)</h3>
 
-<h2>4-Day Camp Intensive in New York’s Hudson Valley</h2>
-<h2>with 4th Generation Master Alex Dong</h2>
-<h3>November 6-9, 2015</h3>
+	<p>Classes will include a mixture of forms and push hands</p>
 
-<h3>Lifebridge Sanctuary, Rosendale New York<h3>
-<h3>(about 75 miles north of New York City)</h3>
+	<p>Details</p>
+	<ul>
+	<li>Cost for the 4 day camp, $620, includes:</li>
+	<li>3 nights lodging, semi-private rooms w/ shared bath</li>
+	<li>(Bed linens provided but bring your own towel)</li>
+	<li>9 classes:</li>
+	<li>Friday 3:00 pm & 7:00 pm</li>
+	<li>Saturday – Sunday 10:00 am, 3:00 pm & 7:00 pm</li>
+	<li>Monday 10:00 am</li>
+	<li>8 Meals: Friday dinner – Monday breakfast </li>
+	</ul>
 
-<p>Classes will include a mixture of forms and push hands</p>
+	<p>Weekend Option, $425, includes:</p>
+	<ul>
+	<li>2 nights lodging, Friday & Saturday</li>
+	<li>6 classes: Friday 3pm to Sunday 10am</li>
+	<li>6 meals: Friday dinner to Sunday lunch</li>
+	</ul>
 
-<p>Details</p>
-<ul>
-<li>Cost for the 4 day camp, $620, includes:</li>
-<li>3 nights lodging, semi-private rooms w/ shared bath</li>
-<li>(Bed linens provided but bring your own towel)</li>
-<li>9 classes:</li>
-<li>Friday 3:00 pm & 7:00 pm</li>
-<li>Saturday – Sunday 10:00 am, 3:00 pm & 7:00 pm</li>
-<li>Monday 10:00 am</li>
-<li>8 Meals: Friday dinner – Monday breakfast </li>
-</ul>
+	<p>Beginners Option: Saturday 10am and 3pm classes:</p>
+	<ul>
+	<li>$65 one class plus lunch</li>
+	<li>$100 both classes plus lunch</li>
+	</ul>
 
-<p>Weekend Option, $425, includes:</p>
-<ul>
-<li>2 nights lodging, Friday & Saturday</li>
-<li>6 classes: Friday 3pm to Sunday 10am</li>
-<li>6 meals: Friday dinner to Sunday lunch</li>
-</ul>
-
-
-<p>Beginners Option: Saturday 10am and 3pm classes:</p>
-<ul>
-<li>$65 one class plus lunch</li>
-<li>$100 both classes plus lunch</li>
-</ul>
-
-<p>
-Send payment to Martha Cheo, 115 Springtown Rd., New Paltz, NY 12561
-845-256-9316, mcheo@hvc.rr.com (checks payable to Martha Cheo)
-</p>		
-
+	<p>Send payment to Martha Cheo, 115 Springtown Rd., New Paltz, NY 12561
+		845-256-9316, mcheo@hvc.rr.com (checks payable to Martha Cheo)</p>		
 <pre>
 Please register me for Alex Dong’s Hudson Valley Intensive, November 6-9, 2015
 
