--- a/workshops/index.html
+++ b/workshops/index.html
@@ -265,6 +265,7 @@ State________ Zip__________________ Email_____________________________________
         <p>Located in front of the beautiful Kaneohe bay on the island of Oahu</br>
 	Don't miss this great opportunity for a residential workshop in paradise</br>
 	More details to follow </p>
+	<p><img src="http://www.taichispirit.org.uk/10years/images/08.jpg" alt="Pushing hands"></img></p>
       </div>
       
       
