--- a/workshops/index.html
+++ b/workshops/index.html
@@ -263,8 +263,9 @@ State________ Zip__________________ Email_____________________________________
         <h3>Camp Kokokahi, Hawaii</h3>
         <p>February 5th 2016 - February 10th 2016</p>
         <p>Located in front of the beautiful Kaneohe bay on the island of Oahu</br>
-	Don't miss this great opportunity for a residential workshop in paradise</br>
-	More details to follow </p>
+	Don't miss this great opportunity for a residential workshop in paradise</p>
+	<p>More details to follow </p>
+	<p><a href="http://www.ywcaoahu.org/ywca-kokokahi" target="_blank">Camp Kokokahi website</a></p>
 	<p><img src="http://www.taichispirit.org.uk/10years/images/08.jpg" alt="Pushing hands"></img></p>
       </div>
       
