--- a/workshops/index.html
+++ b/workshops/index.html
@@ -262,7 +262,7 @@ State________ Zip__________________ Email_____________________________________
             <div id="hawaii2015" style="display:none" class="image-popup" class="book-details-popup">
         <h3>Camp Kokokahi, Hawaii</h3>
         <p>February 5th 2016 - February 10th 2016</p>
-        <p>Located in front of the beautiful Kaneohe bay on the island of Oahu</br>
+        <p>Located in front of the beautiful Kaneohe bay on the island of Oahu.
 	Don't miss this great opportunity for a residential workshop in paradise</p>
 	<p>More details to follow </p>
 	<p><a href="http://www.ywcaoahu.org/ywca-kokokahi" target="_blank">Camp Kokokahi website</a></p>
