--- a/classes/crete/index.html
+++ b/classes/crete/index.html
@@ -32,7 +32,8 @@
 
   <section class="history-classes link-container">
     <div class="history-container classes-container">
-      <h1>Instructor: Harris Klonizakis</h1></a>
+      <h1>Instructor: Harris Klonizakis</h1>
+      <a href="http://www.intheflow.gr/tai-chi-and-qi-gong.html">Local website</a>
       <p>Contact: <a href="mailto:xkloni@yahoo.com">xkloni@yahoo.com</a></p>
     </div>
   </section>
