--- a/workshops/index.html
+++ b/workshops/index.html
@@ -186,10 +186,10 @@ State________ Zip__________________ Email_____________________________________
         <h3>Moncton</h3>
         
         
-<table width="879" cellpadding="7" cellspacing="0" style="page-break-before: always">
-	<col width="865">
+<table cellpadding="7" cellspacing="0" style="page-break-before: always">
+
 	<tr>
-		<td width="865" valign="top" style="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0cm">
+		<td  valign="top" style="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0cm">
 
 
 			<p lang="en-US" class="western" align="center" style="margin-bottom: 0cm">
@@ -206,13 +206,13 @@ State________ Zip__________________ Email_____________________________________
 		</td>
 	</tr>
 	<tr>
-		<td width="865" height="43" valign="top" style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0cm; padding-bottom: 0cm; padding-left: 0.19cm; padding-right: 0cm">
+		<td valign="top" style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: none; padding-top: 0cm; padding-bottom: 0cm; padding-left: 0.19cm; padding-right: 0cm">
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><br>
 			</p>
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">Sessions:
 				Friday, November 13, 2015</font></font></p>
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">		7:00-9:00
-			pm â€“ Bouctouche, NB â€“ to be announced</font></font></p>
+			pm Bouctouche, NB  to be announced</font></font></p>
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><br>
 			</p>
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">		Saturday
@@ -251,11 +251,9 @@ State________ Zip__________________ Email_____________________________________
 <p lang="en-US" class="western" style="margin-bottom: 0cm; line-height: 100%">
 <br>
 </p>
-<table width="879" cellpadding="7" cellspacing="0" style="page-break-before: always">
-	<col width="864">
-	<col width="4356">
+<table cellpadding="7" cellspacing="0" style="page-break-before: always">
 	<tr valign="top">
-		<td width="864" style="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0cm">
+		<td style="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0cm">
 			<p lang="en-GB" class="western" align="center" style="margin-bottom: 0cm">
 			<br>
 			</p>
@@ -278,20 +276,20 @@ State________ Zip__________________ Email_____________________________________
 			<p lang="en-US" class="western" align="center"><br>
 			</p>
 		</td>
-		<td width="4356" style="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0cm">
+		<td style="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0cm">
 			<p style="widows: 0; orphans: 0"><br>
 			</p>
 		</td>
 	</tr>
 	<tr>
-		<td colspan="2" width="865" height="44" valign="top" style="border: 1px solid #000000; padding: 0cm 0.19cm">
+		<td colspan="2"  valign="top" style="border: 1px solid #000000; padding: 0cm 0.19cm">
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><br>
 			</p>
 			<p lang="en-US" class="western"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">Name		</font></font></p>
 		</td>
 	</tr>
 	<tr>
-		<td colspan="2" width="865" height="30" valign="top" style="border: 1px solid #000000; padding: 0cm 0.19cm">
+		<td colspan="2" valign="top" style="border: 1px solid #000000; padding: 0cm 0.19cm">
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><br>
 			</p>
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">Address
@@ -300,21 +298,21 @@ State________ Zip__________________ Email_____________________________________
 		</td>
 	</tr>
 	<tr>
-		<td colspan="2" width="865" height="32" valign="top" style="border: 1px solid #000000; padding: 0cm 0.19cm">
+		<td colspan="2"  valign="top" style="border: 1px solid #000000; padding: 0cm 0.19cm">
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><br>
 			</p>
 			<p lang="en-US" class="western"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">Telephone	</font></font></p>
 		</td>
 	</tr>
 	<tr>
-		<td colspan="2" width="865" height="30" valign="top" style="border: 1px solid #000000; padding: 0cm 0.19cm">
+		<td colspan="2"  valign="top" style="border: 1px solid #000000; padding: 0cm 0.19cm">
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><br>
 			</p>
 			<p lang="en-US" class="western"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">Email		</font></font></p>
 		</td>
 	</tr>
 	<tr>
-		<td colspan="2" width="865" height="30" valign="top" style="border: 1px solid #000000; padding: 0cm 0.19cm">
+		<td colspan="2" valign="top" style="border: 1px solid #000000; padding: 0cm 0.19cm">
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">Dates
 			of attendance		Full Workshop  	</font></font><font face="Arial, sans-serif"><font size="4" style="font-size: 16pt">â–¡</font></font><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">
 			   $280</font></font></p>
@@ -331,7 +329,7 @@ State________ Zip__________________ Email_____________________________________
 		</td>
 	</tr>
 	<tr>
-		<td colspan="2" width="865" height="20" valign="top" style="border: 1px solid #000000; padding: 0cm 0.19cm">
+		<td colspan="2" valign="top" style="border: 1px solid #000000; padding: 0cm 0.19cm">
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><br>
 			</p>
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">Dietary
@@ -341,7 +339,7 @@ State________ Zip__________________ Email_____________________________________
 		</td>
 	</tr>
 	<tr>
-		<td colspan="2" width="865" height="81" valign="top" style="border: 1px solid #000000; padding: 0cm 0.19cm">
+		<td colspan="2"  valign="top" style="border: 1px solid #000000; padding: 0cm 0.19cm">
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">Please
 			send your registration to:</font></font></p>
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><br>
