--- a/workshops/index.html
+++ b/workshops/index.html
@@ -87,9 +87,9 @@
         <br>Workshop will start on Thursday at 17:30 and will end on Sunday at 19:00</p>
         <p><br><strong>TIMETABLE OF CLASSES:</strong>
         <br>Thursday 1/10, 17:30-20:00
-        <br>Friday 2/10, 10:30-13:00 & 17:00-19:30
-        <br>Saturday 3/10, 10:30-13:00 & 17:00-19:30
-        <br>Sunday 4/10, 10:30-13:00 & 16:30-19:00</p>
+        <br>Friday 2/10, 10:30-13:00 &amp; 17:00-19:30
+        <br>Saturday 3/10, 10:30-13:00 &amp; 17:00-19:30
+        <br>Sunday 4/10, 10:30-13:00 &amp; 16:30-19:00</p>
 
         <p>Students need to attend all classes</p>
         <p><strong>Cost of the workshop (lessons only):</strong> 300 US dollars
@@ -145,8 +145,8 @@
 	<li>3 nights lodging, semi-private rooms w/ shared bath</li>
 	<li>(Bed linens provided but bring your own towel)</li>
 	<li>9 classes:</li>
-	<li>Friday 3:00 pm & 7:00 pm</li>
-	<li>Saturday – Sunday 10:00 am, 3:00 pm & 7:00 pm</li>
+	<li>Friday 3:00 pm &amp; 7:00 pm</li>
+	<li>Saturday – Sunday 10:00 am, 3:00 pm &amp; 7:00 pm</li>
 	<li>Monday 10:00 am</li>
 	<li>8 Meals: Friday dinner – Monday breakfast </li>
 	</ul>
