--- a/workshops/index.html
+++ b/workshops/index.html
@@ -212,7 +212,7 @@ State________ Zip__________________ Email_____________________________________
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">Sessions:
 				Friday, November 13, 2015</font></font></p>
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">		7:00-9:00
-			pm Bouctouche, NB  to be announced</font></font></p>
+			pm Bouctouche, NB (venue to be announced)</font></font></p>
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><br>
 			</p>
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">		Saturday
@@ -220,7 +220,7 @@ State________ Zip__________________ Email_____________________________________
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">		9:30
 			am to 12:00 pm and 1:30 to 4:00 pm</font></font></p>
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">		Moncton
-			â€“ to be announced</font></font></p>
+			(venue to be announced)</font></font></p>
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><br>
 			</p>
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">Practice
@@ -237,14 +237,7 @@ State________ Zip__________________ Email_____________________________________
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt"><span lang="fr-CA">		</span></font></font><font color="#0000ff"><u><a href="mailto:claire14@nb.sympatico.ca"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt"><span lang="fr-CA">claire14@nb.sympatico.ca</span></font></font></a></u></font></p>
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt"><span lang="fr-CA">		</span></font></font><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">Telephone:
 			(506) 855-6609</font></font></p>
-			<p lang="en-US" class="western" style="margin-bottom: 0cm"><br>
-			</p>
-			<p lang="en-US" class="western" style="margin-bottom: 0cm"><br>
-			</p>
-			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">Web
-			Site:  	</font></font><font color="#0000ff"><u><a href="http://www.alexdongtaiji.com/"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">www.alexdongtaiji.com</font></font></a></u></font></p>
-			<p lang="en-US" class="western"><br>
-			</p>
+		
 		</td>
 	</tr>
 </table>
@@ -314,15 +307,17 @@ State________ Zip__________________ Email_____________________________________
 	<tr>
 		<td colspan="2" valign="top" style="border: 1px solid #000000; padding: 0cm 0.19cm">
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">Dates
-			of attendance		Full Workshop  	</font></font><font face="Arial, sans-serif"><font size="4" style="font-size: 16pt">â–¡</font></font><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">
+			of attendance</p>
+			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">
+			Full Workshop  	</font></font><font face="Arial, sans-serif"><font size="4" style="font-size: 16pt">&#9744;</font></font><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">
 			   $280</font></font></p>
-			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">				Friday			</font></font><font face="Arial, sans-serif"><font size="4" style="font-size: 16pt">â–¡</font></font><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">
+			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">				Friday</font></font><font face="Arial, sans-serif"><font size="4" style="font-size: 16pt">&#9744;</font></font><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">
 			    $55</font></font></p>
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">	(lunch
-			included)	Saturday		</font></font><font face="Arial, sans-serif"><font size="4" style="font-size: 16pt">â–¡</font></font><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">
+			included)	Saturday		</font></font><font face="Arial, sans-serif"><font size="4" style="font-size: 16pt">&#9744;</font></font><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">
 			   $130</font></font></p>
 			<p lang="en-US" class="western" style="margin-bottom: 0cm"><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">	(lunch
-			included)	Sunday 		</font></font><font face="Arial, sans-serif"><font size="4" style="font-size: 16pt">â–¡</font></font><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">
+			included)	Sunday 		</font></font><font face="Arial, sans-serif"><font size="4" style="font-size: 16pt">&#9744;</font></font><font face="Arial, sans-serif"><font size="2" style="font-size: 11pt">
 			   $130</font></font></p>
 			<p lang="en-US" class="western"><br>
 			</p>
