--- a/classes/coloradoutah/index.html
+++ b/classes/coloradoutah/index.html
@@ -27,7 +27,7 @@
   </header>
 
   <div class="header-background">
-    <h1>Colorado & Utah Borders</h1>
+    <h1>Colorado &amp; Utah Borders</h1>
   </div>
 
   <section class="history-classes">
