--- a/classes/crete/index.html
+++ b/classes/crete/index.html
@@ -30,13 +30,32 @@
     <h1>Crete, Greece</h1>
   </div>
 
-  <section class="history-classes link-container">
+   <section class="history-classes">
     <div class="history-container classes-container">
-      <h1>Instructor: Harris Klonizakis</h1>
-      <a href="http://www.intheflow.gr/tai-chi-and-qi-gong.html">Local website</a>
+      <a href="#harris-popup" class="animated_popup"><h1>Instructor: Harris Klonizakis</h1></a>
+        <div id="harris-popup" class="image-popup" style="display:none">
+          <h3>Harris Klonizakis</h3>
+          <p>Harris Klonizakis was born in Athens and started his training in taiji
+          in 1999. He has also practiced Yoga, meditation, Hung Gar Kung Fu and
+          Yang family taijiquan. In 2005, Harris started taking taiji lessons
+          from Lydia Tyllianaki.  He was introduced to Master Alex Dong in
+          2006. Since then he has been practicing Dong Style Taiji. He is a
+          physiotherapy assistant and has  worked as a massage therapist since
+          2009. He loves music and explores its healing qualities, plays drums
+          and percussion and enjoys being in nature.
+          </p>
+        </div>
+
+
+	<p><a href="http://www.intheflow.gr/tai-chi-and-qi-gong.html">Local website</a></p>
       <p>Contact: <a href="mailto:xkloni@yahoo.com">xkloni@yahoo.com</a></p>
+
     </div>
   </section>
+
+
+
+
 
   <footer>
     <nav class="footer-homepage">
