--- a/classes/coloradoutah/index.html
+++ b/classes/coloradoutah/index.html
@@ -35,10 +35,10 @@
       <a href="#davidcabin-popup" class="animated_popup"><h1>Instructor: David Cabin</h1></a>
         <div id="davidcabin-popup" class="image-popup" style="display:none">
           <h3>David Cabin</h3>
-          <p>David has been a student of Master Dong's since 1998 and has been teaching Dong Family Yang Style Taiji since 2003. He teaches classes in Vail, Edwards, and Eagle Colorado.</p>
+          <p>David has been a student of Master Dong's since 1998 and has been teaching Dong 
+          Family Yang Style Taiji since 2003. He teaches classes in Vail and Eagle Colorado.</p>
         </div>
-      <p>Tuesdays and Thursdays from 6:00 pm to 7:30 pm.
-      <br>Colorado Mountain College in Vail, Colorado (also in Vail and Eagle Colorado)
+      <p>Location: Vail and Eagle Colorado
       <br>Phone: 970-914-5027 or Email: <a href="mailto:dsc@techdancers.net">dsc@techdancers.net</a>
     </div>
 
