--- a/classes/index.html
+++ b/classes/index.html
@@ -56,7 +56,7 @@
         <li><a href="pacificgrove/">Pacific Grove, California</a></li>
         <li><a href="santabarbara/">Santa Barbara, California</a></li>
         <li><a href="coloradoutah/">Colorado And Utah Borders</a></li>
-        <li><a href="newlondon/">New London, Connecticut</a></li>
+     <!--    <li><a href="newlondon/">New London, Connecticut</a></li> -->
         <li><a href="oahu/">Honolulu, Hawaii</a></li>
         <li><a href="longisland/">Long Island, New York</a></li>
         <li><a href="syracuse/">Syracuse, New York</a></li>
