--- a/classes/newlondon/index.html
+++ b/classes/newlondon/index.html
@@ -32,8 +32,7 @@
 
   <section class="history-classes link-container">
     <div class="history-container classes-container">
-      <h1>Instructor: Linda Newton</h1></a>
-      <p>Contact: <a href="mailto:lnewton01@snet.net">lnewton01@snet.net</a></p>
+    <p>Not active.</p>
     </div>
   </section>
 
