--- a/classes/newlondon/index.html
+++ b/classes/newlondon/index.html
@@ -32,7 +32,7 @@
 
   <section class="history-classes link-container">
     <div class="history-container classes-container">
-    <p>Not active.</p>
+    <p>Not active...</p>
     </div>
   </section>
 
