--- a/workshops/index.html
+++ b/workshops/index.html
@@ -359,7 +359,12 @@ State________ Zip__________________ Email_____________________________________
         <p>February 5th 2016 - February 10th 2016</p>
         <p>Located in front of the beautiful Kaneohe bay on the island of Oahu.
 	Don't miss this great opportunity for a residential workshop in paradise.
-	<b><i>More details to follow.</i></b> </p>
+	</p>
+	<p>$700 inclusive (training, food and cabin).</br>
+	$650 for just training and food or instructors</br>
+	To register, send payment in by January 2016</br>
+	For training related questions: <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></br>
+	All other questions: <a href="mailto:tccacademy@hawaii.rr.com">tccacademy@hawaii.rr.com</a></p>
 	<p><a href="http://www.ywcaoahu.org/ywca-kokokahi" target="_blank">Camp Kokokahi website</a></p>
 	<p><img src="http://www.taichispirit.org.uk/10years/images/08.jpg" alt="Pushing hands"></img></p>
       </div>
