--- a/classes/quebec/index.html
+++ b/classes/quebec/index.html
@@ -87,12 +87,16 @@
           </p>
           <p>
           Philippe began instruction in 2013 in the city of Magog, Canada.
+          <p>Call: 819-574-4203 or Email: 
+          <a href="mailto:TaiChi.Magog@gmail.com" target="_blank">TaiChi.Magog@gmail.com</a></p>
         </div>
 
-    <p>
-    <br>St-Jean Bosco Church, 900 Sherbrooke Street, Magog, Quebec
-    <br>Time: Thursdays, 18h30 - 20h30
-    <br>Call: 819-574-4203 or Email: <a href="mailto:TaiChi.Magog@gmail.com" target="_blank">TaiChi.Magog@gmail.com</a></p>
+    <p>Mondays and Wednesdays 18:00 - 19:00</br>
+      <a href="http://www.ccchl.ca/"> Centre Culturel et Communautaire Henri-Lemieux</a></br>
+      7644, rue &Eacute;douard, LaSalle,  Canada, H8P 1T3</br>
+      Tel: 514.367.5000 </br>
+      Fax: 514.367.4471</br>
+      Classes start Monday September 28th 2015.</p>
     </div>
 
   </section>
