--- a/classes/quebec/index.html
+++ b/classes/quebec/index.html
@@ -92,7 +92,7 @@
         </div>
 
     <p>Mondays and Wednesdays 18:00 - 19:00</br>
-      <a href="http://www.ccchl.ca/"> Centre Culturel et Communautaire Henri-Lemieux</a></br>
+      <a href="http://www.ccchl.ca/"  target="_blank"> Centre Culturel et Communautaire Henri-Lemieux</a></br>
       7644, rue &Eacute;douard, LaSalle,  Canada, H8P 1T3</br>
       Tel: 514.367.5000 </br>
       Fax: 514.367.4471</br>
