--- a/store/index.html
+++ b/store/index.html
@@ -110,7 +110,7 @@
         <h3><span class="red-highlight">NEW!</span> Dong Taiji Sticks</h3>
         <h4>$40.00</h4>
         <a href="#taijisticks-popup" class="animated_popup"><img src="../assets/images/tape9.png"></a>
-        <h5><a href="#taijisticks-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <h5><a href="#taijisticks-popup" class="animated_popup book-details-link">DVD Details</a></h5>
         <div id="taijisticks-popup" style="display:none">
           <h3>Dong Style Taiji Sticks</h3>
           <p>The sticks form has the same movements and sequence as the advance Saber form. But the energies and techniques are executed differently. The sticks are even quicker than the Saber and movements comes more from the wrists. Two sticks are used to block, strike and balance each other. Sticks are designed for quick strikes.</p>
@@ -126,7 +126,7 @@
         <h3>Yang Style Slow V1 & 2</h3>
         <h4>$50.00</h4>
         <a href="#yangstyle-popup" class="animated_popup"><img src="../assets/images/tape8.png"></a>
-        <h5><a href="#yangstyle-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <h5><a href="#yangstyle-popup" class="animated_popup book-details-link">DVD Details</a></h5>
         <div id="yangstyle-popup" style="display:none">
           <h3>Yang Style Slow V1 & 2</h3>
           <p>With a new space saving version of the Slow Set that requires only two thirds of the space.</p>
@@ -142,7 +142,7 @@
         <h3>Weapons Set</h3>
         <h4>$65.00</h4>
         <a href="#weapons-popup" class="animated_popup"><img src="../assets/images/tape3.png"></a>
-        <h5><a href="#weapons-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <h5><a href="#weapons-popup" class="animated_popup book-details-link">DVD Details</a></h5>
         <div id="weapons-popup" style="display:none">
           <h3>Weapons Set</h3>
           <p>Sabre, advanced sabre, sword, sticks, and spear forms feature on this DVD and all forms are demonstrated in full, providing a rare insight into advanced taiji practice. Total running time: 37:17</p>
@@ -158,7 +158,7 @@
         <h3>Hao Style and Fa-Jing</h3>
         <h4>$50.00</h4>
         <a href="#haostyle-popup" class="animated_popup"><img src="../assets/images/tape2.png"></a>
-        <h5><a href="#haostyle-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <h5><a href="#haostyle-popup" class="animated_popup book-details-link">DVD Details</a></h5>
         <div id="haostyle-popup" style="display:none">
           <h3>Hao Style and Fa-Jing</h3>
           <p>Includes the Dong Family Hard Form (traditional Hao style), and the Dong Family Fa-Jing form (slow & fast) which was created by Alex's great grandfather. Total running time: 34:38</p>
@@ -174,7 +174,7 @@
         <h3>Three Treasures</h3>
         <h4>$30.00</h4>
         <a href="#threetreasures-popup" class="animated_popup"><img src="../assets/images/tape5.png"></a>
-        <h5><a href="#threetreasures-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <h5><a href="#threetreasures-popup" class="animated_popup book-details-link">DVD Details</a></h5>
         <div id="threetreasures-popup" style="display:none">
           <h3>Three Treasures</h3>
           <p>Peng, Lu, Ze, An - Hard Qi Gong - Taiji Gong.</p>
@@ -190,7 +190,7 @@
         <h3>Dong Fast & Fajin</h3>
         <h4>$40.00</h4>
         <a href="#dongfastfajin-popup" class="animated_popup"><img src="../assets/images/tape6.png"></a>
-        <h5><a href="#dongfastfajin-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <h5><a href="#dongfastfajin-popup" class="animated_popup book-details-link">DVD Details</a></h5>
         <div id="dongfastfajin-popup" style="display:none">
           <h3>Dong Fast & Fajin</h3>
           <p>A updated version of the Dong Family Fast Form with the Dong Family Fajin Form.</p>
@@ -206,7 +206,7 @@
         <h3><span class="red-highlight">SALE!</span> Hong Kong 2006</h3>
         <h4>$40.00</h4>
         <a href="#hongkong-popup" class="animated_popup"><img src="../assets/images/tape7.png"></a>
-        <h5><a href="#hongkong-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <h5><a href="#hongkong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
         <div id="hongkong-popup" style="display:none">
           <h3>Hong Kong 2006</h3>
           <p>Master Alex Dong has produced an extraordinary series of demonstration videos, and all three are available in DVD format, and include full length demonstrations and describe the benefits of each form. Along with music soundtrack, the video captures the essence of Master Alex's softness and mastery through close-ups of his hands and face.</p>
@@ -222,7 +222,7 @@
         <h3><span class="red-highlight">SALE!</span> Dong History Tape</h3>
         <h4>$40.00</h4>
         <a href="#donghistory-popup" class="animated_popup"><img src="../assets/images/tape4.png"></a>
-        <h5><a href="#donghistory-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <h5><a href="#donghistory-popup" class="animated_popup book-details-link">DVD Details</a></h5>
         <div id="donghistory-popup" style="display:none">
           <h3>Dong History Tape</h3>
           <p>Follow the history of Four Generations of the Dong Family, featuring Dong (Tung) Ying Chieh, Dong Hu (Tung Fu) Ling, and Dong Zeng Chen performing the 108 sequence form of the Traditional Yang Style Tai Chi Chuan.</p>
