--- a/workshops/index.html
+++ b/workshops/index.html
@@ -279,6 +279,30 @@ State________ Zip__________________ Email_____________________________________
 	All other questions: <a href="mailto:tccacademy@hawaii.rr.com">tccacademy@hawaii.rr.com</a></p>
 	<p><a href="http://www.ywcaoahu.org/ywca-kokokahi" target="_blank">Camp Kokokahi website</a></p>
 	<p><img src="http://www.taichispirit.org.uk/10years/images/08.jpg" alt="Pushing hands"></img></p>
+	<pre>
+		Booking Form
+		Winter Retreat in Paradise Feb. 5th to 10th 2015
+		Kaneohe Hawaii-Island of Oahu
+
+
+		Name_____________________  Email______________________
+		
+		Mobile Phone #________________ Emergency Contact___________________
+
+		Detailed Flight info: Arrival____________________________________________
+		
+		Departure___________________________________ Pick-up___ Drop-off___
+
+		Diet specifications and Allergies: _______________________________________
+
+		Payment: Full $700___   Non Residential $650___   Deposit $300___
+
+		10% late fee after January 1st 2016.
+		
+		</pre>
+		<p>
+		<i>We can provide pick and drop off from and to airport or hotel on Feb. 5th and 10th. </i></p>
+
       </div>
       
        <a href="#utah2016" class="animated_popup"><h1>Westwater Intensive</h1></a>
