--- a/workshops/index.html
+++ b/workshops/index.html
@@ -87,6 +87,18 @@
       </div>
       
       
+       <a href="#siena2016" class="animated_popup"><h1>Siena Push Hands Workshop</h1></a>
+      	<h2>June 10th 2016 - June  15th 2016</h2>
+            <div id="siena2016" style="display:none" class="image-popup" class="book-details-popup">
+        <h3>Siena Push Hands Workshop</h3>
+        <p>Our first Pushing Hands workshop for 2016 will be in June in
+	countryside of Siena, Italy. Great food prepared by a
+	local chef with ingredients from their farm. There will be a day of
+	forms work on Saturday June 11th. Workshop ends on Wednesday morning 15th.
+	<p>Please make your plans early. More details to follow. Contact
+	Claudio Corbelli for more information by email 
+	<a href="mailto:claudio.dongtaichi@gmail.com">claudio.dongtaichi@gmail.com</a></p>
+      </div>
 
     </div>
   </section>
