--- a/workshops/index.html
+++ b/workshops/index.html
@@ -27,7 +27,7 @@
   </header>
 
   <div class="header-background">
-    <h1>Workshops 2015</h1>
+    <h1>Workshops</h1>
     <h3>Upcoming Intense And Focused Training Around The World</h3>
   </div>
 
